--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,33 @@
 version: "2"
 services:
 
-  db:
-    container_name: postgres
-    image: postgres:12.3 
-    networks:
-      - color-nw
-    volumes:
-      - db-data:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-
   nginx-proxy:
     container_name: nginx-proxy
-    image: jwilder/nginx-proxy:latest
+    image: nginx:1.19.1
     networks:
       - color-nw
     ports:
       - "80:80"
       - "443:443"
     volumes:
-      - /etc/nginx/certs
+      - /etc/nginx/conf.d
       - /etc/nginx/vhost.d
       - /usr/share/nginx/html
+      - /etc/nginx/certs
+
+  nginx-proxy-gen:
+    container_name: nginx-proxy-gen
+    image: jwilder/docker-gen:0.7.0
+    networks:
+      - color-nw
+    volumes_from:
+      - nginx-proxy
+    volumes:
+      - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
       - /var/run/docker.sock:/tmp/docker.sock:ro
+    depends_on:
+      - nginx-proxy
+    command: -notify-sighup nginx-proxy -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
 
   nginx-letsencrypt:
     container_name: nginx-letsencrypt
@@ -36,22 +40,39 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
     depends_on:
       - nginx-proxy
+      - nginx-proxy-gen
     environment:
+      - NGINX_DOCKER_GEN_CONTAINER=nginx-proxy-gen
       - DEFAULT_EMAIL=${DEFAULT_EMAIL}
       - ACME_CA_URI=${ACME_CA_URI}
 
+  db:
+    container_name: postgres
+    image: postgres:12.3
+    networks:
+      - color-nw
+    depends_on:
+      - nginx-proxy
+      - nginx-proxy-gen
+      - nginx-letsencrypt
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+
   nginx:
-    container_name: nginx
+    container_name: nginx-sample-app
     image: nginx:1.19.1
     networks:
       - color-nw
     depends_on:
       - nginx-proxy
+      - nginx-proxy-gen
       - nginx-letsencrypt
+      - db
     environment:
       - VIRTUAL_HOST=${HOSTNAME}
       - LETSENCRYPT_HOST=${HOSTNAME}
-
 
 volumes:
   db-data:
