--- a/play-backend/conf/application.conf
+++ b/play-backend/conf/application.conf
@@ -1,1 +1,5 @@
 # https://www.playframework.com/documentation/latest/Configuration
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = [".colorcontroversy.com", "localhost:9000"]
+}
