--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.1",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.7.5"
   },
   "scripts": {
