success with code gen, now getting CORS errors :)

--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
     "@types/superagent": "^4.1.10",
+    "colorapi": "file:swagger-gen",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -29,17 +30,13 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "swagger": "node build-swagger.ts"
+    "build-api": "cd swagger-gen && node gen.ts && ../node_modules/.bin/tsc && cd .. && npm i swagger-gen"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
