simple nginx config to connect frontend and backend

--- a/play-backend/conf/application.conf
+++ b/play-backend/conf/application.conf
@@ -1,5 +1,5 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.filters.hosts {
-  # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = [".colorcontroversy.com", "localhost:9000", "localhost:3000"]
+  # Allow requests to colorcontroversy.com, its subdomains, and localhost:9000.
+  allowed = [".colorcontroversy.com", "play-backend:9000"]
 }
