--- a/react-frontend/Dockerfile.dev
+++ b/react-frontend/Dockerfile.dev
@@ -18,6 +18,10 @@ COPY ./public ./public
 COPY ./src ./src
 COPY ./tsconfig.json ./tsconfig.json
 
+# build swagger
+COPY ./swagger-gen ./swagger-gen
+RUN npm run build-api
+
 # port
 EXPOSE 3000
 
