connect postgres and scala - fun disco bug with react

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - 80:80
       # - 443:443
     volumes:
-      - ./nginx-conf/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx-conf/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
 
   # nginx-proxy:
   #   container_name: nginx-proxy
@@ -34,7 +34,7 @@ services:
   #   volumes_from:
   #     - nginx-proxy
   #   volumes:
-  #     - ./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
+  #     - ./nginx/nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro
   #     - /var/run/docker.sock:/tmp/docker.sock:ro
   #   depends_on:
   #     - nginx-proxy
@@ -59,7 +59,7 @@ services:
 
   postgres:
     container_name: postgres
-    image: postgres:12.3
+    image: postgres:12.4
     networks:
       - color-nw
     # depends_on:
@@ -68,6 +68,7 @@ services:
     #   - nginx-letsencrypt
     volumes:
       - postgres-data:/var/lib/postgresql/data
+      - ./postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
     environment:
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
@@ -83,6 +84,8 @@ services:
       - postgres
     volumes:
       - ./play-backend:/root/app
+    environment:
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
 
   react-frontend:
     container_name: react-frontend
