--- a/play-backend/conf/application.conf
+++ b/play-backend/conf/application.conf
@@ -3,3 +3,8 @@ play.filters.hosts {
   # Allow requests to colorcontroversy.com, its subdomains, and localhost:9000.
   allowed = [".colorcontroversy.com", "play-backend:9000"]
 }
+
+# https://www.playframework.com/documentation/2.7.x/SettingsJDBC#Reference
+db.default.driver=org.postgresql.Driver
+db.default.url="postgres://postgres:"${?POSTGRES_PASSWORD}"@postgres/postgres"
+play.db.prototype.hikaricp.connectionTimeout="5 seconds"
