--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,8 +7,6 @@ server {
     #access_log  /var/log/nginx/host.access.log  main;
 
     location / {
-        # root   /usr/share/nginx/html;
-        # index  index.html index.htm;
         proxy_pass         http://react-frontend;
         proxy_redirect     off;
         proxy_set_header   Host $host;
@@ -18,8 +16,13 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://play-backend:9000/;
-    } 
+        proxy_pass http://play-backend/;
+    }
+
+    # TODO: DEV ONLY??
+    location /swagger {
+        proxy_pass http://play-backend/assets/swagger.json;
+    }
 
     #error_page  404              /404.html;
 
