--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,6 +1,6 @@
 
 user  nginx;
-worker_processes  1;
+worker_processes  auto;
 
 error_log  /var/log/nginx/error.log warn;
 pid        /var/run/nginx.pid;
@@ -34,9 +34,9 @@ http {
         server react-frontend:3000;
     }
 
-    # upstream play-backend {
-    #     server play-backend:9000;
-    # }
+    upstream play-backend {
+        server play-backend:9000;
+    }
 
     include /etc/nginx/conf.d/*.conf;
 }
