--- a/play-backend/conf/application.conf
+++ b/play-backend/conf/application.conf
@@ -1,7 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.filters.hosts {
   # Allow requests to colorcontroversy.com, its subdomains, and localhost:9000.
-  allowed = [".colorcontroversy.com", "play-backend:9000"]
+  allowed = [".colorcontroversy.com", "play-backend"]
 }
 
 # https://www.playframework.com/documentation/2.7.x/SettingsJDBC#Reference
