--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -11,6 +11,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.3",
     "@types/superagent": "^4.1.10",
     "colorapi": "file:swagger-gen",
     "node-sass": "^4.14.1",
@@ -21,6 +22,7 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "styled-components": "^5.2.0",
     "superagent": "^6.0.0",
     "swagger-typescript-codegen": "^3.2.0",
     "typescript": "^3.7.5"
@@ -36,7 +38,11 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
