--- a/play-backend/conf/application.conf
+++ b/play-backend/conf/application.conf
@@ -1,6 +1,6 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.filters.hosts {
-  # Allow requests to colorcontroversy.com, its subdomains, and localhost:9000.
+  # Allow certain requests
   allowed = [".colorcontroversy.com", "play-backend"]
 }
 
@@ -8,3 +8,6 @@ play.filters.hosts {
 db.default.driver=org.postgresql.Driver
 db.default.url="postgres://postgres:"${?POSTGRES_PASSWORD}"@postgres/postgres"
 play.db.prototype.hikaricp.connectionTimeout="5 seconds"
+
+# disable csrf as no auth/session data is stored in client's browser cookies
+play.filters.disabled += play.filters.csrf.CSRFFilter
