--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,8 @@ version: '2'
 services:
   nginx:
     container_name: nginx
-    image: nginx:1.19.1
+    build: ./nginx
+#    image: nginx:1.19.1
     networks:
       - color-nw
     depends_on:
@@ -10,9 +11,14 @@ services:
       - play-backend
     ports:
       - 80:80
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - 443:443
+#    volumes:
+#      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+#      - ./nginx/default.conf:/etc/nginx/conf.d/www.wip.colorcontroversy.com.conf
+#      - ./nginx/letsencrypt-nginx.sh:letsencrypt-nginx.sh
+    environment:
+      - DOMAIN_NAME=${DOMAIN_NAME}
+      - LETSENCRYPT_EMAIL=${LETSENCRYPT_EMAIL}
 
   postgres:
     container_name: postgres
