--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 server {
     listen       80;
-    listen  [::]:80;
-    server_name  localhost;
+    listen  [::]:80 ipv6only=on;
+    server_name  diy.colorcontroversy.com www.diy.colorcontroversy.com;
 
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
