--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,23 +1,18 @@
-# FROM nginx:1.19.1
-# 
-# RUN apt-get update \
-#     && apt-get install -y \
-#     python-certbot-nginx
-# 
-# COPY ./nginx.conf /etc/nginx/nginx.conf
-# 
-# COPY ./default.conf /etc/nginx/conf.d/www.wip.colorcontroversy.com.conf
-# 
-# RUN rm /etc/nginx/conf.d/default.conf
-# 
-# RUN service nginx start
-# 
-# CMD ["certbot", "--nginx", "-d", "wip.colorcontroversy.com", "-d", "www.wip.colorcontroversy.com", "--email", "leorobinovitch@gmail.com", "--agree-tos"]
-# 
-
 FROM nginx:1.19.1
-COPY ./default.conf /etc/nginx/conf.d/default.conf
+
+RUN apt-get update \
+      && apt-get install -y \
+      python-certbot-nginx
+
 COPY ./nginx.conf /etc/nginx/nginx.conf
+
+# TODO: default.conf change server name automatically
+COPY ./default.conf /etc/nginx/conf.d/default.conf
+RUN ["mv", "/etc/nginx/conf.d/default.conf", "/etc/nginx/conf.d/www.$DOMAIN_NAME.conf"]
+
 COPY ./letsencrypt-nginx.sh ./letsencrypt-nginx.sh
 RUN ["chmod", "+x", "./letsencrypt-nginx.sh"]
-CMD ["./letsencrypt-nginx.sh"]
+
+RUN ["certbot", "--nginx", "-d", "$DOMAIN_NAME", "-d", "www.$DOMAIN_NAME", "--email", "$LETSENCRYPT_EMAIL", "--agree-tos", "--redirect", "--non-interactive", "--test-cert"]
+
+# CMD ["./letsencrypt-nginx.sh"]
