change error return vals to json instead of html from play

--- a/play-backend/conf/application.conf
+++ b/play-backend/conf/application.conf
@@ -1,3 +1,6 @@
+# error values json instead of html
+play.http.errorHandler = play.api.http.JsonHttpErrorHandler
+
 # https://www.playframework.com/documentation/latest/Configuration
 play.filters.hosts {
   # Allow certain requests
