--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -66,7 +66,8 @@ services:
     container_name: play-backend
     build:
       context: ./play-backend
-      dockerfile: Dockerfile.prod
+      dockerfile: Dockerfile
+    command: sbt run
     networks:
       - color-nw
     depends_on:
