--- a/react-frontend/Dockerfile.prod
+++ b/react-frontend/Dockerfile.prod
@@ -31,6 +31,9 @@ FROM nginx:1.19.2-alpine
 
 COPY --from=build /app/build /usr/share/nginx/html
 
+# react-router specific nginx conf
+COPY ./nginx/nginx-react-router.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
