--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -15,6 +15,7 @@
     "@types/superagent": "^4.1.10",
     "colorapi": "file:swagger-gen",
     "node-sass": "^4.14.1",
+    "plausible-tracker": "^0.3.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
