vibe code it into a static application to remove hosting costs

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-.env
-data
-backups/*.sql
-backups/judge_count.txt
 **/.DS_Store
 **/.idea
 **/.python-version
 **/.ipynb_checkpoints
-**/.g8
-**/__pycache__
 **/node_modules
+**/build
